--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20sp"
     android:orientation="vertical"
+    android:paddingStart="@dimen/padding_start"
+    android:paddingEnd="@dimen/padding_start"
     android:paddingTop="@dimen/small_padding"
     tools:context=".MainActivity">
 
@@ -23,7 +25,7 @@
 
     <Button
         android:id="@+id/done_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/padding_start"
@@ -36,7 +38,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/nickname_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -46,9 +48,10 @@
         android:text="Name" />
 
     <TextView
-        android:id="@+id/nickname"
+        android:id="@+id/nickname_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:visibility="gone" />
 
     <ImageView
